--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@zeit/next-css": "^1.0.1",
     "next": "latest",
     "next-page-transitions": "1.0.0-alpha.6",
-    "react": "16.8.2",
+    "react": "^16.8.2",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.2",
     "react-pose": "4.0.7",
