--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@zeit/next-css": "^1.0.1",
     "next": "latest",
     "next-page-transitions": "1.0.0-alpha.6",
-    "react": "^16.8.2",
+    "react": "^16.8.6",
     "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.2",
+    "react-dom": "^16.8.2",
     "react-pose": "4.0.7",
     "react-pose-text": "3.1.0",
+    "react-safe": "^1.3.0",
     "react-spring": "7.2.11",
     "react-transition-group": "1.2.1"
   }
