--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next",
     "start": "next start -p 8000",
     "build": "next build",
-    "export": "next export"
+    "export": "next export",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
