--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "export": "next export",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "^10"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
