--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "start": "next start -p 80",
+    "start": "npm i && next build && next start -p 80",
     "build": "next build",
     "export": "next export",
     "heroku-postbuild": "npm run build"
