--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out",
     "dev": "next",
     "start": "npm i && next build && next start -p 80",
     "build": "next build",
@@ -19,11 +21,12 @@
   "dependencies": {
     "@popmotion/easing": "1.0.2",
     "@zeit/next-css": "^1.0.1",
-    "next": "latest",
+    "gh-pages": "^2.1.1",
+    "next": "^9.1.1",
     "next-page-transitions": "1.0.0-beta.2",
-    "react": "^16.8.6",
+    "react": "^16.10.2",
     "react-bootstrap": "1.0.0-beta.12",
-    "react-dom": "^16.8.2",
+    "react-dom": "^16.10.2",
     "react-pose": "4.0.8",
     "react-pose-text": "3.1.0",
     "react-safe": "^1.3.0",
