--- a/package.json
+++ b/package.json
@@ -6,31 +6,29 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d out",
-    "dev": "next",
-    "start": "npm i && next build && next start -p 80",
+    "dev": "next dev",
+    "start": "next start",
     "build": "next build",
     "export": "next export",
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "node": "^8"
+    "node": ">=18"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@popmotion/easing": "1.0.2",
-    "@zeit/next-css": "^1.0.1",
-    "gh-pages": "^2.1.1",
-    "next": "^9.1.1",
-    "next-page-transitions": "1.0.0-beta.2",
-    "react": "^16.10.2",
-    "react-bootstrap": "1.0.0-beta.12",
-    "react-dom": "^16.10.2",
-    "react-pose": "4.0.8",
-    "react-pose-text": "3.1.0",
+    "@popmotion/easing": "^1.0.2",
+    "framer-motion": "^10.17.9",
+    "gh-pages": "^6.1.1",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^18.2.0",
     "react-safe": "^1.3.0",
-    "react-spring": "8.0.27",
-    "react-transition-group": "4.2.1"
-  }
+    "react-spring": "^9.7.3",
+    "react-transition-group": "^4.4.5"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
